# org-dashboard

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE_RECOMMENDATIONS.md  AUTONOMOUS_INSTRUCTIONS.md  COMPLETE_PLATFORM_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PIPELINE.md  README.md  RESEARCH_FEATURES.md  coverage.json  create_metainfo.py  index.html  mkdocs.yml  pyproject.toml  rebuild.py  requirements-dev.txt  requirements.txt  run_platform.py
.github/workflows/: rebuild-platform.yml  update-dashboard.yml
by-language/: index.html
by-language/css/: index.html
by-language/html/: index.html
by-language/javascript/: index.html
by-language/jupyter-notebook/: index.html
by-language/python/: index.html
by-language/scss/: index.html
by-language/tex/: index.html
by-language/typescript/: index.html
by-language/unknown/: index.html
by-topic/: index.html
by-topic/algorithmic-trading/: index.html
by-topic/api/: index.html
by-topic/backtesting/: index.html
by-topic/beamer-slides/: index.html
by-topic/blockchain/: index.html
by-topic/course/: index.html
by-topic/course-materials/: index.html
by-topic/credit-risk/: index.html
by-topic/cryptocurrency/: index.html
by-topic/deep-learning/: index.html
by-topic/digital-finance/: index.html
by-topic/education/: index.html
by-topic/explainable-ai/: index.html
by-topic/express/: index.html
by-topic/finance/: index.html
configs/: production.yaml
data/: build_log.json  citation_history.json  citation_report.json  code_quality_report.json  collaboration_network.json  ml_topic_analysis.json  repos.json  repository_health_report.json  reproducibility_report.json  research_metadata.json  search_data.json  search_index.pkl  stats.json
docs/: index.html  index.md  search.md  stats.md
repos/: index.html
schemas/: research_metadata_schema.json
scripts/: advanced_visualizations.py  build_research_platform.py  check_links.py  citation_tracker.py  code_quality_analyzer.py  collaboration_network_analyzer.py  community_features.py  create_compact_overview.py  create_example_repos.py  create_landing_page_viz.py  create_repo_overview.py  export_search_data.py  fetch_academic_data.py  fetch_org_data.py  fetch_org_data_research.py  generate_dependency_tree.py  generate_markdown.py  generate_quality_heatmap.py  generate_timeseries_dashboard.py  ml_topic_modeling.py  parse_research_metadata.py  render_notebooks.py  repository_health_scorer.py  search_indexer.py  seed_community_data.py  verify_platform_automation.py  visualization_builder.py  viz_footer.py
search/: index.html  search_index.json
stats/: index.html
stylesheets/: academic.css
templates/: index.md.j2  language.md.j2  language_overview.md.j2  repo.md.j2  repo_research.md.j2  repos_index.md.j2  stats.md.j2  topic.md.j2  topic_overview.md.j2
tests/: conftest.py
visualizations/: citation_network.json  repository_overview.html
(+227 files in other folders)
